Bug 1313955 - Dormant recovery seek uses wrong time. r=jwwang

Dormant mode is setting recovery seek to MDSM::mCurrentPosition which
doesn't match what MediaSink position which is used to leave the last
frame in the image container.

Switch to using mMediaSink->GetPosition for dormant recovery seek
target.

MozReview-Commit-ID: 7YLecRR8XrN